--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,14 @@
 [[redirects]]
-  from = "/listings/3105-palmdale-cir"
-  to = "/listings/3105-palmdale-cir.html"
-  status = 200
-  force = false
+from = "/listings/3105-palmdale-cir"
+to = "/listings/3105-palmdale-cir.html"
+status = 200
+force = false
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
+
+[build]
+command = "npx vite build"
+publish = "dist"
